--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -36,6 +36,7 @@ body {
 .content {
 	position: relative;
 	font-family: sans-serif;
+	color: red;
 	width: 90%;
 	max-width: 500px;
 	margin: 140px auto;
@@ -46,6 +47,7 @@ body {
 		transform: translateZ(100px);
 	}
 	.background {
+		background-color: blue;
 		position: absolute;
 		width: 100%;
 		height: 100%;
